--- a/src/scss/variables/_navbar.scss
+++ b/src/scss/variables/_navbar.scss
@@ -13,8 +13,6 @@ $navbar-active-highlight: transparent !default;
 $navbar-text-truncate-spacer-right: 25px !default;
 $navbar-text-truncate-max-width: 140px !default;
 
-$zindex-navbar-overlay: $zindex-dropdown - 1 !default; // 999
-
 // Navbar Collapse
 
 $navbar-collapse-absolute-box-shadow: null !default;
